# homebrew-tap

./: .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  README.md
.claude/agents/: design-skeptic.md  hostile-reviewer.md
.github/workflows/: ci.yml  release.yml
Formula/: gootodoo.rb  gpush.rb  imap-extract.rb
crates/toolkit/: Cargo.toml
crates/toolkit/src/: config.rs  lib.rs  log.rs
scripts/fetch-text/: fetch-text  tool.json
scripts/gh-recon/: gh-recon  tool.json
scripts/ghcat/: ghcat  tool.json
scripts/gpeek/: gpeek  tool.json
scripts/mgw/: mgw  tool.json
scripts/move-pr-diff/: move-pr-diff  tool.json
scripts/pr-family/: pr-family  tool.json
scripts/show-claude-images/: show-claude-images  tool.json
tools/eml2txt/: Cargo.toml  tool.json
tools/eml2txt/src/: main.rs
tools/forge/: Cargo.toml
tools/forge/src/: main.rs
tools/gootodoo/: Cargo.toml  README.md  tool.json
tools/gootodoo/src/: idmap.rs  main.rs  model.rs  oauth.rs  tasks.rs
tools/gpush/: Cargo.toml  README.md  tool.json
tools/gpush/src/: idmap.rs  main.rs  model.rs  oauth.rs  tasks.rs
tools/imap-extract/: .env.example  Cargo.toml  README.md  tool.json
tools/imap-extract/src/: main.rs
