[package]
name = "forge"
version = "0.1.0"
edition.workspace = true
license.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
description = "Scaffolding and Homebrew-formula generator for the homebrew-tap tool factory"

[[bin]]
name = "forge"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
clap.workspace = true
serde = { version = "1", features = ["derive"] }
serde_json = "1"
