[package]
name = "gootodoo"
version = "0.2.0"
edition.workspace = true
license.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
description = "Idempotently write Google Tasks and Calendar from NDJSON intents"

[[bin]]
name = "gootodoo"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
clap.workspace = true
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# Blocking HTTP (rustls). A strictly-serial NDJSON drainer has no concurrency to
# exploit, so we deliberately avoid dragging tokio/hyper (and their binary-size
# cost) in via reqwest/yup-oauth2 — OAuth is hand-rolled on top of ureq instead.
ureq = { version = "3", features = ["json"] }
sha2 = "0.10"
base64 = "0.22"
