[package]
name = "imap-extract"
version = "0.1.0"
edition.workspace = true
license.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
description = "Watch an IMAP folder over IDLE and export new mail as Markdown"

[[bin]]
name = "imap-extract"
path = "src/main.rs"

[dependencies]
toolkit.workspace = true
anyhow.workspace = true
clap.workspace = true
tokio.workspace = true
async-imap = { version = "0.11", default-features = false, features = ["runtime-tokio"] }
native-tls = "0.2"
tokio-native-tls = "0.3"
futures = "0.3"
mail-parser = { version = "0.11", features = ["full_encoding"] }
htmd = "0.5"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
jiff = "0.2"
